# musicXML_parser

./: .gitignore  .gitmodules  README.md  __init__.py  abc.txt  bayes_test.py  constants.py  copy_and_align.py  data_class.py  direction.py  exception.py  feature_extraction.py  feature_utils.py  measure.py  midi_utils.py  mscx_reader.py  musicxml_expression.py  musicxml_parser_old.py  notations.py  note.py  note_duration.py  note_dynamic.py  part.py  pedal_cleaning.py  readme.md  requirement.txt  rnn.py  run.py  score_part.py  setup.cfg  test.py  test_script.py  time_signature.py  utils.py  visualize_utils.py  xml.musicxml  xml.xml  xml_matching.py  xml_midi_test.py  xml_utils.py  (+1 more)
examples/: MAPS_MUS-mz_545_3_ENSTDkCl.mid  SMD_Chopin_Op010-03_007_20100611-SMD.mid  Vienna_Chopin_op10_no3_p01.mid
magenta/: __init__.py  chord_symbol.py  direction.py  exception.py  key_signature.py  main.py  measure.py  musicxml_parser.py  notations.py  note.py  note_duration.py  part.py  score_part.py  tempo.py  time_signature.py
magenta/testdata/: chopin.xml  flute_scale2.musicxml
magenta_parser/: .gitignore  test.py
magenta_parser/magenta/: __init__.py  musicxml_parser.py  test.py
midi_utils/: midi_utils.py
musicXML_parser/mxp/: main.py  measure.py  notations.py
mxp/: __init__.py  chord_symbol.py  direction.py  direction_constants.py  exception.py  key_signature.py  main.py  measure.py  notations.py  note.py  note_duration.py  note_dynamic.py  part.py  playable_notes.py  score_part.py  tempo.py  time_signature.py
src/musicxml_parser/: main.py  measure.py  notations.py  (+2 more)
(+12 files in other folders)
