[metadata]
name = musicxml_parser
version = 0.0.1
author = mac-marg-pianist
author_email = ilcobo2@kaist.ac.kr
description = musicxml parser for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TaegyunKwon/musicXML-parser.git
project_urls =
    Bug Tracker = https://github.com/mac-marg-pianist/musicXML_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src